--- a/assets/style.css
+++ b/assets/style.css
@@ -76,3 +76,58 @@ nav {
   color: #6070ff;
   font-size: 24px;
 }
+
+.about {
+  background-color: white;
+  border: 1px solid #dfe1e6;
+  background-image: url("assets/img/header-shapes.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
+  border-top: none;
+  height: 590px;
+  padding: 20px;
+  border-radius: 0 0 0 70px;
+  padding-top: 104px;
+}
+
+
+section > h1 {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  display: flex;
+  color: #172b4d;
+  margin: 12px 0;
+}
+
+section > p {
+  font-size: 16px;
+  line-height: 24px;
+  color: #344563;
+  margin: 12px 0;
+}
+
+.social_media {
+  position: static;
+  min-width: 193.17px;
+  height: 20px;
+  left: 24px;
+  top: 470px;
+  display: flex;
+  flex-wrap: wrap;
+  flex: none;
+  order: 3;
+  flex-grow: 0;
+  margin: 12px 0;
+}
+
+.social_media > li {
+  margin: 10px;
+  list-style: none;
+}
+
+.social_media i {
+  color: #505f79;
+  font-size: 21px;
+}
