--- a/assets/style.css
+++ b/assets/style.css
@@ -78,9 +78,8 @@ nav {
 }
 
 .about {
-  
   border: 1px solid #dfe1e6;
-  background-image: url("./img/header-shapes.png");
+  background-image: url("img/header-shapes.png");
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0;
@@ -130,12 +129,14 @@ section > p {
   color: #505f79;
   font-size: 21px;
 }
+
 .work {
   padding-top: 100px;
   display: grid;
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
 
 }
+
 .project {
   display: flex;
   flex-wrap: wrap;
@@ -144,11 +145,12 @@ section > p {
   margin-left: 10%;
   grid-column-gap: 20px;
   margin-bottom: 100px;
-  
 }
+
 .general {
   padding-right:5px;
 }
+
 .project_image {
 border-radius: 8px;
 flex: none;
@@ -178,6 +180,33 @@ height: 220px;
   margin-bottom: 10vh;
 }
 #general_inf {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px;
+  gap: 120px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+#general_inf_1 {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px;
+  gap: 120px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+#general_inf_2 {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px;
+  gap: 120px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+#general_inf_3 {
   display: flex;
   flex-wrap: wrap;
   padding: 0px;
