--- a/assets/style.css
+++ b/assets/style.css
@@ -78,6 +78,7 @@ nav {
 }
 
 .about {
+  background-color: white;
   border: 1px solid #dfe1e6;
   background-image: url("img/header-shapes.png");
   background-repeat: no-repeat;
@@ -134,34 +135,35 @@ section > p {
   padding-top: 100px;
   display: grid;
   background-color: #e5e5e5;
-
 }
 
 .project {
   display: flex;
   flex-wrap: wrap;
   width: 80%;
-  padding: 25px;;
+  padding: 25px;
   margin-left: 10%;
   grid-column-gap: 20px;
   margin-bottom: 100px;
 }
 
 .general {
-  padding-right:5px;
+  padding-right: 5px;
 }
 
 .project_image {
-border-radius: 8px;
-flex: none;
-order: 0;
-flex-grow: 0;
-width: 295px;
-height: 220px;
+  border-radius: 8px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  width: 295px;
+  height: 220px;
 }
+
 .general > h3 {
   padding-top: 8px;
 }
+
 .project_description {
   font-family: Poppins, sans-serif;
   font-style: normal;
@@ -174,47 +176,49 @@ height: 220px;
   margin-right: 10px;
   margin-bottom: 8px;;
 }
+
 .project {
   background-color: #fff;
   border-radius: 2.5%;
   margin-bottom: 10vh;
 }
+
 #general_inf {
   display: flex;
   flex-wrap: wrap;
-  padding: 0px;
   gap: 120px;
   flex: none;
   order: 1;
   flex-grow: 0;
 }
+
 #general_inf_1 {
   display: flex;
   flex-wrap: wrap;
-  padding: 0px;
   gap: 120px;
   flex: none;
   order: 1;
   flex-grow: 0;
 }
+
 #general_inf_2 {
   display: flex;
   flex-wrap: wrap;
-  padding: 0px;
   gap: 120px;
   flex: none;
   order: 1;
   flex-grow: 0;
 }
+
 #general_inf_3 {
   display: flex;
   flex-wrap: wrap;
-  padding: 0px;
   gap: 120px;
   flex: none;
   order: 1;
   flex-grow: 0;
 }
+
 .skills {
   display: flex;
   flex-wrap: wrap;
@@ -238,10 +242,12 @@ height: 220px;
   list-style: none;
   text-align: center;
 }
+
 .title {
   font-weight: 500;
-  margin-top:10px;
+  margin-top: 10px;
 }
+
 .external_link {
   border: 1px solid #396df2;
   border-radius: 5px;
@@ -268,6 +274,7 @@ height: 220px;
   border-radius: 8px;
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
 }
+
 .external_link a:hover { color: #fff; }
 #about_me {
   margin: 0;
@@ -316,7 +323,6 @@ height: 220px;
   text-decoration: underline;
   text-decoration-color: #18a0fa;
   text-decoration-thickness: 3px;
-  
 }
 
 #profile_link ul {
@@ -342,7 +348,6 @@ height: 220px;
   text-align: center;
   padding: 10px 10px;
   align-self: baseline;
- 
 }
 
 #my_resume:hover {
@@ -368,11 +373,6 @@ height: 220px;
   margin-right: 12px;
 }
 
-.lisframes {
-  display: flex;
-  justify-content: space-between;
-}
-
 #presentation {
   font-family: Poppins, sans-serif;
   font-style: normal;
@@ -380,53 +380,6 @@ height: 220px;
   font-size: 16px;
   line-height: 24px;
   color: #344563;
-}
-
-#profile_link {
-  display: flex;
-  flex-direction: column;
-}
-
-#profile_link h2 {
-  font-family: Poppins, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  color: #7f8cff;
-}
-
-#profile_link h2:hover {
-  text-decoration: underline;
-  text-decoration-color: #18a0fa;
-  text-decoration-thickness: 3px;
-}
-
-#profile_link ul {
-  display: flex;
-  padding-left: 0;
-}
-
-#profile_link ul li {
-  list-style: none;
-  margin-right: 12px;
-}
-
-#languages_skills {
-  display: flex;
-  flex-direction: column;
-}
-
-.data-inf {
-  margin-left: 24px;
-  margin-top: 114px;
-  margin-right: 12px;
-}
-
-.lisframes {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 15px;
 }
 
 .lisframes div { margin-right: 24px; } 
@@ -458,7 +411,6 @@ height: 220px;
   margin-bottom: 0;
   margin-top: 0;
 }
-
 
 .lang {
   list-style: none;
