--- a/assets/style.css
+++ b/assets/style.css
@@ -145,6 +145,9 @@ section > p {
   margin-left: 10%;
   grid-column-gap: 20px;
   margin-bottom: 100px;
+  background-color: #fff;
+  border-radius: 2.5%;
+  margin-bottom: 10vh;
 }
 
 .general {
@@ -174,13 +177,7 @@ section > p {
   margin-top: 8px;
   text-align: justify;
   margin-right: 10px;
-  margin-bottom: 8px;;
-}
-
-.project {
-  background-color: #fff;
-  border-radius: 2.5%;
-  margin-bottom: 10vh;
+  margin-bottom: 8px;
 }
 
 #general_inf {
@@ -276,6 +273,7 @@ section > p {
 }
 
 .external_link a:hover { color: #fff; }
+
 #about_me {
   margin: 0;
   display: flex;
@@ -373,15 +371,6 @@ section > p {
   margin-right: 12px;
 }
 
-#presentation {
-  font-family: Poppins, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 24px;
-  color: #344563;
-}
-
 .lisframes div { margin-right: 24px; } 
 
 .lisframes div img { vertical-align: middle; }
@@ -453,7 +442,7 @@ section > p {
 #programming .lang p {
   font-family: Poppins, sans-serif;
   font-style: normal;
-  font-weight: 500 ;
+  font-weight: 500;
   font-size: 15px;
   line-height: 20px;
   color: #253858;
@@ -461,12 +450,14 @@ section > p {
   margin-top: 15px;
 }
 
-.frameworks-skills .lang p {
-  font-family: Poppins, sans-serif !important;
-  font-style: normal !important;
-  font-weight: 500 !important;
-  font-size: 15px !important;
-  line-height: 20px !important;
-  color: #253858 !important;
-  margin-left: 15px !important;
+.show-language{
+  margin-left: 95%;
+}
+
+.show-frameworks {
+  margin-left: 95%;
+}
+
+.show-frameworks-1 {
+  margin-left: 95%;
 }
