--- a/assets/style.css
+++ b/assets/style.css
@@ -6,10 +6,6 @@
   box-sizing: border-box;
 }
 
-main {
-  background-color: #dfe1e6;
-}
-
 header {
   left: 0;
   right: 0;
@@ -281,7 +277,7 @@ section > p {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  margin-bottom: 50px;
+  padding-bottom: 95px;
   border-radius: 0 70px 0 0;
 }
 
@@ -486,4 +482,67 @@ ul#programming {
 
 img.separator {
   width: 100%;
+}
+
+.contact-section {
+  padding: 20px;
+  padding-top: 80px;
+  background-color: #6070ff;
+  background-image: url("img/contact.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: 0;
+  margin-right: 0;
+  border: none;
+  border-radius: 70px 0 0 0;
+}
+
+.txt {
+  color: white;
+  margin: 20px;
+  padding: 10px;
+  text-align: center;
+}
+
+#contact .txt > h2 {
+  font-weight: bold;
+  font-size: 40px;
+  margin: 20px;
+  line-height: 52px;
+}
+
+#contact .txt > p {
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  color: #ebebff;
+}
+
+form {
+  display: block;
+  width: 100%;
+  padding: 5%;
+}
+
+input {
+  width: 90%;
+  height: 48px;
+  margin: 10px 0;
+  border: none;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 17px;
+  line-height: 20px;
+  color: #172b4d;
+}
+
+textarea {
+  width: 90%;
+  margin: 10px 0;
+  border: none;
+  padding: 20px;
+  border-radius: 8px;
+  font-size: 17px;
+  line-height: 20px;
+  color: #172b4d;
 }
