--- a/assets/style.css
+++ b/assets/style.css
@@ -554,3 +554,10 @@ textarea {
 input[type=submit] {
   width: 35%;
 }
+
+input[type="submit"]:hover {
+  background-color: #6070ff;
+  color: white;
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+  cursor: pointer;
+}
