--- a/assets/style.css
+++ b/assets/style.css
@@ -6,28 +6,57 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #e5e5e5;
+}
+
 header {
   left: 0;
   right: 0;
   top: 44px;
-  bottom: 0;
   background-color: white;
+  padding-bottom: 70px;
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
-.icon {
-  width: 100px;
-  height: 40px;
-  top: calc(50% - 40px / 2);
-  left: 12px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  padding: 10px 12px 10px 12px;
+@media only screen and (min-width: 768px) {
+  .icon {
+    width: 100px;
+    height: 40px;
+    top: calc(50% - 40px / 2);
+    left: 12px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 10px 12px 10px 10px;
+  }
 }
 
-section {
-  display: flex;
-  flex-direction: column;
+@media only screen and (max-width: 768px) {
+  .icon {
+    width: 100px;
+    height: 40px;
+    top: calc(50% - 40px / 2);
+    left: 12px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 20px 12px 10px 12px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  section {
+    display: flex;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  section {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 section > a {
@@ -60,31 +89,61 @@ nav {
   justify-content: space-between;
 }
 
-.tonav {
-  padding: 8px;
-  width: 40px;
-  height: 40px;
-  right: 24px;
-  top: calc(50% - 40px / 2);
+@media only screen and (max-width: 768px) {
+  .topnav {
+    padding: 8px;
+    width: 40px;
+    height: 40px;
+    right: 24px;
+    top: calc(50% - 40px / 2);
+  }
 }
 
-.tonav > i {
+@media only screen and (max-width: 768px) {
+  .topnavdesktop {
+    display: none;
+  }
+}
+
+.topnav > i {
   color: #6070ff;
   font-size: 24px;
 }
 
-.about {
-  background-color: white;
-  border: 1px solid #dfe1e6;
-  background-image: url("img/header-shapes.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 0;
-  border-top: none;
-  height: 590px;
-  padding: 20px;
-  border-radius: 0 0 0 70px;
-  padding-top: 104px;
+@media only screen and (min-width: 768px) {
+  .about {
+    background-image: url("img/Header bg@2x.png");
+    background-repeat: no-repeat;
+    background-size: 90% 100%;
+    background-color: white;
+    margin: 0;
+    border-top: none;
+    height: 500px;
+    padding-left: 3%;
+    padding-right: 3%;
+    border-radius: 0 0 0 70px;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .about {
+    background-color: white;
+    border: 1px solid #dfe1e6;
+    background-image: url("img/header-shapes.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0;
+    border-top: none;
+    height: 590px;
+    padding-left: 50px;
+    padding-right: 100px;
+    border-radius: 0 0 0 70px;
+    padding-top: 104px;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 section > h1 {
@@ -117,9 +176,35 @@ section > p {
   margin: 12px 0;
 }
 
+@media only screen and (min-width: 768px) {
+  .topnav {
+    display: none;
+  }
+}
+
+.mainmenu {
+  height: 20px;
+  margin-right: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  flex: none;
+  order: 3;
+  flex-grow: 0;
+}
+
 .social_media > li {
   margin: 10px;
   list-style: none;
+}
+
+.mainmenu > li {
+  margin: 10px;
+  list-style: none;
+}
+
+.mainmenu i {
+  color: #505f79;
+  font-size: 21px;
 }
 
 .social_media i {
@@ -270,15 +355,28 @@ section > p {
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
 }
 
-.external_link a:hover { color: #fff; }
+.external_link a:hover {
+  color: #fff;
+}
 
-#about_me {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  padding-bottom: 95px;
-  border-radius: 0 70px 0 0;
+@media only screen and (min-width: 768px) {
+  #about_me {
+    margin: 0;
+    background-color: #fff;
+    padding-bottom: 95px;
+    border-radius: 0 70px 0 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #about_me {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    padding-bottom: 95px;
+    border-radius: 0 70px 0 0;
+  }
 }
 
 #about_me h1 {
@@ -353,11 +451,23 @@ section > p {
   color: #fff;
 }
 
-#my_skills {
-  display: flex;
-  flex-direction: column;
-  margin-top: 35px;
-  margin-left: 20px;
+@media only screen and (min-width: 768px) {
+  #my_skills {
+    display: flex;
+    flex-direction: column;
+    margin-top: 114px;
+    margin-left: 20px;
+    width: 46%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #my_skills {
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+    margin-left: 20px;
+  }
 }
 
 #languages_skills {
@@ -373,10 +483,22 @@ section > p {
   margin-bottom: 5px;
 }
 
-.data-inf {
-  margin-left: 24px;
-  margin-top: 114px;
-  margin-right: 12px;
+@media only screen and (min-width: 768px) {
+  .data-inf {
+    margin-left: 24px;
+    margin-top: 114px;
+    margin-right: 12px;
+    width: 46%;
+    padding-left: 50px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .data-inf {
+    margin-left: 24px;
+    margin-top: 114px;
+    margin-right: 12px;
+  }
 }
 
 #my_skills ul {
@@ -484,27 +606,60 @@ img.separator {
   width: 100%;
 }
 
-.contact-section {
-  padding: 20px;
-  padding-top: 80px;
-  background-color: #6070ff;
-  background-image: url("img/contact.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-left: 0;
-  margin-right: 0;
-  border: none;
-  display: flex;
-  border-radius: 70px 0 0 0;
+@media only screen and (min-width: 768px) {
+  .contact-section {
+    padding-top: 80px;
+    background-color: #6070ff;
+    background-image: url("img/contactdesktop.png");
+    background-repeat: no-repeat;
+    background-size: 95% 90%;
+    margin-left: 0;
+    margin-right: 0;
+    border: none;
+    display: flex;
+    border-radius: 70px 0 0 0;
+    flex-direction: column;
+    padding-left: 27%;
+    padding-right: 27%;
+  }
 }
 
-.txt {
-  color: white;
-  margin: 20px;
-  padding: 10px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
+@media only screen and (max-width: 768px) {
+  .contact-section {
+    padding: 20px;
+    padding-top: 80px;
+    background-color: #6070ff;
+    background-image: url("img/contact.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 0;
+    margin-right: 0;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    border-radius: 70px 0 0 0;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .txt {
+    color: white;
+    padding: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .txt {
+    color: white;
+    margin: 20px;
+    padding: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 #contact .txt > h2 {
@@ -521,11 +676,21 @@ img.separator {
   color: #ebebff;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 5%;
+@media only screen and (min-width: 768px) {
+  form {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 5%;
+  }
 }
 
 input {
@@ -551,8 +716,18 @@ textarea {
   color: #172b4d;
 }
 
-input[type=submit] {
-  width: 35%;
+@media only screen and (min-width: 768px) {
+  input[type=submit] {
+    width: 35%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  input[type=submit] {
+    width: 35%;
+  }
 }
 
 input[type="submit"]:hover {
