--- a/assets/style.css
+++ b/assets/style.css
@@ -31,28 +31,47 @@ section > a {
   text-decoration: none;
 }
 
-.icon > a {
+#nav {
+  display: flex;
+}
+
+#nav nav:hover {
+  cursor: pointer;
+}
+
+#nav .logo {
+  text-decoration: none;
+  font-family: Poppins, sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  color: #6070ff;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-left: 24px;
+  margin-top: 20px;
+  width: 25%;
+  margin-right: 60%;
+}
+
+#nav .logo:hover {
+  text-decoration: underline;
+  text-decoration-color: #23a3fa;
+}
+
+header #nav .logo {
+  font-family: Poppins, sans-serif;
   font-weight: bold;
   font-size: 18px;
   line-height: 20px;
-  color: #6070ff;
-  text-decoration: none;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-  margin: 0 0;
 }
 
-nav {
-  width: 100%;
-  height: inherit;
+.hamburger {
+  width: 45px;
+  height: 30px;
   display: flex;
-  justify-content: space-between;
-}
-
-.topnav > i {
-  color: #6070ff;
-  font-size: 24px;
+  align-items: center;
+  margin-top: 20px;
 }
 
 section > h1 {
@@ -231,7 +250,7 @@ h2 {
 .mainmenu > li:hover {
   margin: 10px;
   list-style: none;
-  transform: scale(1.3);
+  transition: 0.7 ease;
   margin-right: 3px;
 }
 
@@ -481,6 +500,10 @@ input[type="submit"]:hover {
 }
 
 @media only screen and (min-width: 768px) {
+  #nav nav {
+    display: none;
+  }
+
   #my_skills p {
     align-self: flex-start;
     font-family: Poppins, sans-serif;
@@ -530,17 +553,6 @@ input[type="submit"]:hover {
     margin-right: auto;
   }
 
-  .icon {
-    width: 100px;
-    height: 40px;
-    top: calc(50% - 40px / 2);
-    left: 12px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    padding: 10px 12px;
-  }
-
   section {
     display: flex;
   }
@@ -559,10 +571,6 @@ input[type="submit"]:hover {
     border-radius: 0 0 0 70px;
     display: flex;
     flex-direction: column;
-  }
-
-  .topnav {
-    display: none;
   }
 
   #about_me {
@@ -655,9 +663,22 @@ input[type="submit"]:hover {
     color: #344563;
     margin: 12px 0;
   }
+
+  #nav .mainmenu li a {
+    text-decoration: none;
+    font-family: Poppins, sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    color: #344563;
+  }
 }
 
 @media only screen and (max-width: 768px) {
+  .mainmenu {
+    display: none;
+  }
+
   input[type=submit] {
     width: 35%;
   }
@@ -692,32 +713,9 @@ input[type="submit"]:hover {
     margin: 12px 0;
   }
 
-  .icon {
-    width: 100px;
-    height: 40px;
-    top: calc(50% - 40px / 2);
-    left: 12px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    padding: 20px 12px 10px 12px;
-  }
-
   section {
     display: flex;
     flex-direction: column;
-  }
-
-  .topnav {
-    padding: 8px;
-    width: 40px;
-    height: 40px;
-    right: 24px;
-    top: calc(50% - 40px / 2);
-  }
-
-  .topnavdesktop {
-    display: none;
   }
 
   #about {
