--- a/assets/style.css
+++ b/assets/style.css
@@ -33,6 +33,12 @@ section > a {
 
 #nav {
   display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-bottom: 20px;
+  background-color: white;
 }
 
 #nav nav:hover {
