--- a/assets/style.css
+++ b/assets/style.css
@@ -14,8 +14,7 @@ header {
   left: 0;
   right: 0;
   top: 44px;
-  background-color: white;
-  padding-bottom: 70px;
+  padding-bottom: 50px;
   padding-left: 3%;
   padding-right: 2.7%;
 }
@@ -559,7 +558,7 @@ input[type="submit"]:hover {
   }
 
   section#work {
-    margin-top: 10%;
+    padding-top: 10%;
     display: flex;
     flex-direction: column;
   }
