--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,13 @@
   box-sizing: border-box;
 }
 
+span {
+  color: red;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+}
+
 body {
   background-color: #e5e5e5;
 }
@@ -647,6 +654,7 @@ input[type="submit"]:hover {
     flex-direction: column;
     padding-left: 27%;
     padding-right: 27%;
+    padding-bottom: 80px;
   }
 
   .txt {
